# exchange-rate-bot

./: .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  setup.cfg
configs/: config.py
entity/: __init__.py  user.py
exchange/: __main__.py
exchange/configs/: __init__.py  config.py  localization.py
exchange/entities/: __init__.py  currency_rate.py  user.py
exchange/entity/: exrates_rates.py
exchange/localizations/: __init__.py  localization.py  rus.json
exchange/logger/: __init__.py  log.py
exchange/meta/: __init__.py  singletone_meta.py
exchange/models/: __init__.py  db_connector.py  db_user.py  db_user_log.py
exchange/modules/: __init__.py  db_connector.py  db_user.py  db_user_log.py  user.py  user_log.py
localizations/: eng.json
models/: __init__.py  db_connector.py  db_connector_meta.py  select.py
